--- a/css/style.css
+++ b/css/style.css
@@ -59,16 +59,24 @@ img {
     width: 100%;
 }
 #home p {
+    align-items: center;
     color: #704c5e;
+    display: flex;
+    flex-flow: row wrap;
+    font-size: 1em;
+    justify-content: center;
+    width: 90%;
 }
 nav {
     align-items: center;
     display: flex;
     flex-flow: row wrap;
     justify-content: center;
+    width: 60%;
 }
 nav ul {
     padding: 0;
+    width: 100%;
 }
 nav ul li {
     display: inline-block;
@@ -80,7 +88,7 @@ nav ul li a {
     text-transform: uppercase;
 }
 footer {
-    padding: 5% 0 5% 0;
+    padding: 2% 0 5% 0;
 }
 #contact {
     align-items: center;
@@ -104,6 +112,7 @@ footer {
 }
 #contact ul li i {
     color: #558b6e;
+    font-size: 1.5em;
 }
 /***** ABOUT *****/
 main {
@@ -158,9 +167,118 @@ img {
 }
 
 @media (min-width: 768px) {
+    h1 {
+      font-size: 2.5em;
+    }
+    h2, a {
+      font-size: 1.5em;
+    }
+    p {
+      font-size: 1em;
+    }
+    /***** HEADER, FOOTER *****/
+    #home h1 {
+        font-size: 2.5em;
+    }
+    #home p {
+        font-size: 1em;
+    }
+    nav {
 
-}
-@media (min-width: 1200px) {
+    }
+    nav ul {
+        padding: 0;
+    }
+    nav ul li {
+        display: inline-block;
+    }
+    nav ul li a {
+        color: #558b6e;
+        display: block;
+        text-decoration: none;
+        text-transform: uppercase;
+    }
+    #contact h2 {
+        font-size: 1.5em;
+    }
+    #contact p {
+        font-size: 1em;
+    }
+    #contact ul {
 
-}
+    }
+    #contact ul li {
+
+    }
+    #contact ul li i {
+        font-size: 2em;
+    }
+    /***** ABOUT *****/
+    #about p {
+        font-size: 1em;
+    }
+    /***** WORK *****/
+    .photos h2 {
+        font-size: 1.5em;
+    }
+    .photos p {
+        font-size: 1em;
+    }
+  }
+  @media (min-width: 1200px) {
+    h1 {
+      font-size: 3.5em;
+    }
+    h2, a {
+      font-size: 2em;
+    }
+    p {
+      font-size: 1.25em;
+    }
+    /***** HEADER, FOOTER *****/
+    #home h1 {
+        font-size: 3.5em;
+    }
+    #home p {
+        font-size: 1.25em;
+    }
+    nav {
+
+    }
+    nav ul {
+        padding: 0;
+    }
+    nav ul li {
+        display: inline-block;
+    }
+    nav ul li a {
+        font-size: 2em;
+    }
+    #contact h2 {
+        font-size: 2em;
+    }
+    #contact p {
+        font-size: 1.25em;
+    }
+    #contact ul {
+
+    }
+    #contact ul li {
+
+    }
+    #contact ul li i {
+        font-size: 3em;
+    }
+    /***** ABOUT *****/
+    #about p {
+        font-size: 1.25em;
+    }
+    /***** WORK *****/
+    .photos h2 {
+        font-size: 2em;
+    }
+    .photos p {
+        font-size: 1.25em;
+    }
+  }
 
