--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,9 @@ header {
     color: #558b6e;
     font-family: 'Great Vibes', cursive;
     font-size: 1.5em;
+    width: 75%;
 }
 #home img {
-    padding: 0 5% 0 0;
     width: 10%;
 }
 img {
